--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,7 +4,7 @@ CXX = g++
 FLAGS = --std=c++11 -D_POSIX_C_SOURCE=200112L -Wall -pedantic -g -I../src
 LIB = -L../src -lfoxbox -lssl -lcrypto
 PREPROCESSOR_FLAGS = 
-ALL = netcat httpserver wget wsserver
+ALL = netcat httpserver wget wsserver wscat
 
 all : $(ALL)
 
