Remove OpenSSL dependency, compile as static library as well
Took SHA1 from RFC 3174
http://tools.ietf.org/html/rfc3174

The WebSocket handshake requires a lot of stuff.

Examples are now compiled with static library so they can be run
without having to set LD_LIBRARY_PATH.

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,23 +2,37 @@
 
 CXX = g++
 FLAGS = --std=c++11 -D_POSIX_C_SOURCE=200112L -Wall -pedantic -g 
-LIB = -lssl -lcrypto
+LIB = 
 PREPROCESSOR_FLAGS = 
-OBJ = base64.po log.po socket.po tcp.po http.po websocket.po
-TARGET = libfoxbox.so
+POBJ = base64.po sha1.po log.po socket.po tcp.po http.po websocket.po
+DYNAMIC = ../libfoxbox.so
+OBJ = base64.o sha1.o log.o socket.o tcp.o http.o websocket.o
+STATIC = ../libfoxbox.a
 
-$(TARGET) : $(OBJ)
-	$(CXX) -shared -Wl,-soname,$(TARGET) -o $(TARGET) $(OBJ) $(PREPROCESSOR_FLAGS) $(LIB)
-	date > build_info
-	uname -a >> build_info
+all : $(DYNAMIC) $(STATIC)
+
+$(DYNAMIC) : $(POBJ)
+	$(CXX) -shared -Wl,-soname,$(DYNAMIC) -o $(DYNAMIC) $(POBJ) $(PREPROCESSOR_FLAGS) $(LIB)
+	date > ../build_info
+	uname -a >> ../build_info
+	
+$(STATIC) : $(OBJ)
+	ar rcs $(STATIC) $(OBJ)
+
+%.o : %.cpp
+	$(CXX) $(FLAGS) $(PREPROCESSOR_FLAGS) -o $@ -c $<
+
 %.po : %.cpp
 	$(CXX) $(FLAGS) $(PREPROCESSOR_FLAGS) -fPIC -o $@ -c $<
+	
+
+
  
 clean :
-	$(RM) $(TARGET) $(OBJ) build_info
+	$(RM) $(DYNAMIC) $(POBJ) ../build_info $(STATIC) $(OBJ)
 
-clean_full: #cleans up all backup files
-	$(RM) $(TARGET) $(OBJ) build_info
+clean_full: #cleans up all backup files $(STATIC) $(OBJ)
+	$(RM) $(DYNAMIC) $(POBJ) ../build_info
 	$(RM) *.*~
 	$(RM) *~
 	$(RM) *.dat
