Actually make Process work
Sort of. There are probably horrible bugs due to signal handling and multithreading and things...

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -5,12 +5,12 @@ FLAGS = --std=c++11 -D_POSIX_C_SOURCE=200112L -Wall -pedantic -g -I../src -pthre
 # Change option before foxbox for dynamic/static
 LIB = -L.. -Wl,-Bstatic -lfoxbox -Wl,-Bdynamic
 PREPROCESSOR_FLAGS = 
-ALL = netcat proxy threadedserver threadedclient httpserver httpproxy wget wsserver wscat 
+ALL = netcat proxy threadedserver threadedclient httpserver httpproxy wget wsserver wscat procat
 
 all : $(ALL)
 
 
-% : %.cpp
+% : %.cpp ../libfoxbox.a
 	$(CXX) $(FLAGS) $(PREPROCESSOR_FLAGS) -o $@ $< $(LIB)
 
 clean :
