Process::Valid is wrong
Ok. Derp.

Derp.

This has been an epic quest when it really shouldn't have.

My first problem was that processes were being zombies.
My second problem was that when I started cleaning them up (with a SIGCHLD handler), I couldn't read anything from them.

For the second problem, it turns out I couldn't read anything because I am using Socket::Valid (which is virtual) to determine if I can read and/or write.
When the Process is a zombie, you can still send kill(0) to it. When it is gone, you can't. I was basically using kill(0) to determine Process::Valid.
So once processes got cleaned up... they weren't valid. Even though the socket associated with them had input waiting to be read.

Ignoring SIGCHLD in POSIX.1-2001 means there are no zombies. I found this buried in the man page for sigaction(2).
This would have been a simpler way of solving the first problem.

My read calls were blocking, I thought I had to flush buffers, or interrupt them (with SIGUSR1) or something.
It doesn't look like I need to do that. I hope.

Will need to use CanSend/CanReceive instead of Valid. It's a bit ambiguous what "Valid" actually means...

Will probably keep the Process::Manager class anyway. It might be useful.

So now it works with a *single* thread... will it work with multi threads (no).

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@
 CXX = g++
 FLAGS = --std=c++11 -D_POSIX_C_SOURCE=200112L -Wall -pedantic -g -I../src -pthread
 # Change option before foxbox for dynamic/static
-LIB = -L.. -Wl,-Bstatic -lfoxbox -Wl,-Bdynamic
+LIB = -L.. -Wl,-Bstatic -lfoxbox -Wl,-Bdynamic -rdynamic
 PREPROCESSOR_FLAGS = 
 ALL = httpserver cgistresstest
 #ALL = netcat proxy threadedserver threadedclient httpserver httpproxy wget wsserver wscat procat
